fixing icon overlaping with text in search input field on category pages header

--- a/src/sass/components/_navigation.sass
+++ b/src/sass/components/_navigation.sass
@@ -164,6 +164,7 @@ input[type="text"]
     background-repeat: no-repeat
     background-position: 95% center
     background-size: 18px
+    padding-right: 40px
     +fullhd
       margin-right: 0
 
